<resources>


    <string name="wechat_id">123</string>

    <string name="app_name">优简历</string>
    <string name="app_tip">做最优秀的简历，得最优秀的职位。</string>

    <string name="template_mall">模板</string>

    <string name="resume_info">简历</string>
    <string name="keep">保存</string>
    <string name="create_first">创建第一份简历</string>
    <string name="delete_resume">删除简历</string>
    <string name="tip_delete_resume">确定删除这份简历吗</string>
    <string name="tip_input_back">退出将不会保存当前输入内容，确定退出？</string>
    <string name="tip_delete">确定删除吗</string>
    <string name="unfilled">未填写</string>
    <string name="optional">（选填）</string>

    <string name="base_info">基本信息</string>
    <string name="resume_name">简历名字</string>
    <string name="hint_resume_name">请输入简历名字</string>
    <string name="avatar">头像</string>
    <string name="name">姓名</string>
    <string name="hint_name">请输入姓名</string>
    <string name="address">现居地址</string>
    <string name="hint_address">请输入现居地址</string>
    <string name="birthday">出生年月</string>
    <string name="hint_birthday">请选择出生年月</string>
    <string name="email">邮箱</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="gender">性别</string>
    <string name="hint_gender">请选择性别</string>
    <string name="gender_man">男</string>
    <string name="gender_women">女</string>
    <string name="height">身高</string>
    <string name="hint_height">请输入身高</string>
    <string name="weight">体重</string>
    <string name="hint_weight">请输入体重</string>
    <string name="marry_status">婚姻状况</string>
    <string name="hint_marry_status">请选择婚姻状况</string>
    <string name="marry_status_unmarried">未婚</string>
    <string name="marry_status_married">已婚</string>
    <string name="marry_status_secret">保密</string>
    <string name="nation">民族</string>
    <string name="hint_nation">请输入民族</string>
    <string name="phone">手机号码</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="political_status">政治面貌</string>
    <string name="hint_political_status">请选择政治面貌</string>
    <string name="political_status_cpc_member">中共党员</string>
    <string name="political_status_probationary_member">预备党员</string>
    <string name="political_status_youth_member">共青团员</string>
    <string name="political_status_masses">群众</string>
    <string name="political_status_democratic_parties">民主党派</string>
    <string name="political_status_others">其他</string>
    <string name="province">籍贯</string>
    <string name="hint_province">请输入籍贯</string>
    <string name="start_work_time">参加工作时间</string>
    <string name="hint_start_work_time">请选择参加工作时间</string>


    <string name="job_info">求职信息</string>
    <string name="job_position">期望职位</string>
    <string name="hint_job_position">请输入期望职位</string>
    <string name="job_city">期望城市</string>
    <string name="hint_job_city">请选择期望城市</string>
    <string name="job_salary">期望薪资</string>
    <string name="hint_job_salary">请输入期望薪资</string>
    <string name="job_time">到岗时间</string>
    <string name="hint_job_time">请选择到岗时间</string>
    <string name="job_time_anytime">随时到岗</string>
    <string name="job_time_7_days">1周以内</string>
    <string name="job_time_1_month">1个月内</string>
    <string name="job_time_3_month">3个月内</string>
    <string name="job_time_no">时间另议</string>


    <string name="education_info">教育经历</string>
    <string name="school">学校</string>
    <string name="hint_education_school">请输入学校</string>
    <string name="record">学历</string>
    <string name="hint_record_record">请选择学历</string>
    <string name="junior_high_school">初中及以下</string>
    <string name="high_school">高中</string>
    <string name="technical_secondary_school">中专</string>
    <string name="junior_college">大专</string>
    <string name="undergraduate">本科</string>
    <string name="master">硕士</string>
    <string name="doctor">博士</string>
    <string name="postdoc">博士后</string>
    <string name="other">其他</string>
    <string name="major">专业</string>
    <string name="hint_education_major">请输入专业</string>
    <string name="education_start_time">开始时间</string>
    <string name="hint_education_start_time">请选择开始时间</string>
    <string name="education_end_time">结束时间</string>
    <string name="hint_education_end_time">请选择结束时间</string>
    <string name="experience_at_school">在校经历</string>
    <string name="hint_education_experience">请输入在校经历</string>

    <string name="work_info">工作经历</string>
    <string name="work_company">公司名称</string>
    <string name="hint_work_company">请输入公司名称</string>
    <string name="work_position">职位名称</string>
    <string name="hint_work_position">请输入职位名称</string>
    <string name="work_start_time">开始时间</string>
    <string name="hint_work_start_time">请选择开始时间</string>
    <string name="work_end_time">结束时间</string>
    <string name="hint_work_end_time">请选择结束时间</string>
    <string name="work_content">工作内容</string>
    <string name="hint_work_content">请输入工作内容</string>


    <string name="project_info">项目经验</string>
    <string name="project_name">项目名称</string>
    <string name="hint_project_name">请输入项目名称</string>
    <string name="project_company">公司名称</string>
    <string name="hint_project_company">请输入公司名称</string>
    <string name="project_role">担任角色</string>
    <string name="hint_project_role">请输入担任角色</string>
    <string name="project_start_time">开始时间</string>
    <string name="hint_project_start_time">请选择开始时间</string>
    <string name="project_end_time">结束时间</string>
    <string name="hint_project_end_time">请选择结束时间</string>
    <string name="project_description">项目描述</string>
    <string name="hint_project_description">请输入项目描述</string>
    <string name="project_url">项目链接</string>
    <string name="project_url_">项目链接:</string>
    <string name="hint_project_url">请输入项目链接</string>

    <string name="skill_info">专业技能</string>
    <string name="skill_name">专业名称</string>
    <string name="hint_skill_name">请输入专业名称</string>
    <string name="skill_proficiency">熟练度</string>
    <string name="hint_skill_proficiency">请选择熟练度</string>
    <string name="proficiency_generally">一般</string>
    <string name="proficiency_good">良好</string>
    <string name="proficiency_skilled">熟练</string>
    <string name="proficiency_proficient">精通</string>

    <string name="certificate_info">证书奖项</string>
    <string name="hint_certificate_info">请填写证书奖项</string>

    <string name="hobby_info">兴趣爱好</string>
    <string name="hint_hobby_info">请填写兴趣爱好</string>

    <string name="evaluation_info">自我评价</string>
    <string name="hint_evaluation_info">请输入自我评价</string>

    <string name="preview">预览</string>
    <string name="mine">我的</string>
    <string name="vip">会员</string>

    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="tip_logout">确定退出当前账号吗？</string>
    <string name="login_success">登录成功</string>
    <string name="register">注册</string>
    <string name="password">密\u3000\u3000码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_right_password">请输入正确密码</string>
    <string name="password_rule">支持输入6–12位以上包含大小写数字的密码</string>
    <string name="account">账\u3000\u3000号</string>
    <string name="please_input_account">请输入手机号码</string>
    <string name="please_input_right_account">请输入正确的账号</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input_confirm_password">请输入确认密码</string>
    <string name="please_input_right_confirm_password">两次密码输入不一致</string>
    <string name="tip_expired">用户信息已过期，请重新登录</string>
    <string name="tip_login">请先登录</string>
    <string name="join_member_with_days">开通会员（%1$s）</string>
    <string name="join_member">开通会员</string>

    <string name="find_job_success">预祝找工作顺利</string>
    <string name="about_us">关于我们</string>
    <string name="developers">开发者</string>
    <string name="individual_developer">个人开发者</string>
    <string name="service_qq">客服QQ</string>
    <string name="copy_success">复制成功</string>
    <string name="service_qq_detail_with_copy">%1$s (点击复制)</string>


    <string name="loading">加载中</string>
    <string name="tip">提示</string>
    <string name="confirm">确认</string>
    <string name="become_vip">成为VIP</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="tip_preview">头部/底部内容被裁剪？</string>
    <string name="detail_hint_preview">如果遇到头部或底部的简历内容被裁剪的情况，可尝试使用这四个平移按钮，可以分别控制头部内容上/下移和底部内容上/下移</string>

</resources>