<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.kang.resume.resume.BaseInfoModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.kang.resume.custom.TitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/base_info"
            app:title_right="@string/keep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.kang.resume.custom.info.InputView
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:input_hint="@string/hint_name"
                    app:input_title="@string/name" />

                <com.kang.resume.custom.info.InputView
                    android:id="@+id/input_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:input_hint="@string/hint_gender"
                    app:input_need_arrow="true"
                    app:input_title="@string/gender" />

                <com.kang.resume.custom.info.InputView
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:input_hint="@string/hint_phone"
                    app:input_title="@string/phone"
                    app:is_phone="true"/>

                <com.kang.resume.custom.info.InputView
                    android:id="@+id/input_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:input_hint="@string/hint_birthday"
                    app:input_need_arrow="true"
                    app:input_title="@string/birthday" />

                <com.kang.resume.custom.info.InputView
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:input_hint="@string/hint_email"
                    app:input_title="@string/email"/>


                <com.kang.resume.custom.info.InputView
                    android:id="@+id/input_start_work_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:input_hint="@string/hint_start_work_time"
                    app:input_title="@string/start_work_time"
                    app:input_need_arrow="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>