<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.kang.resume.resume.JobModel" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.kang.resume.custom.TitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/job_info"
            app:title_right="@string/keep" />

        <com.kang.resume.custom.info.InputView
            android:id="@+id/input_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:input_hint="@string/hint_job_position"
            app:input_title="@string/job_position" />

        <com.kang.resume.custom.info.InputView
            android:id="@+id/input_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:input_hint="@string/hint_job_city"
            app:input_need_arrow="true"
            app:input_title="@string/job_city" />


        <com.kang.resume.custom.info.InputView
            android:id="@+id/input_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:input_hint="@string/hint_job_time"
            app:input_need_arrow="true"
            app:input_title="@string/job_time" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30">

            <TextView
                android:id="@+id/tv_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/job_salary"
                android:textColor="@color/black25"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_input_title">

                <EditText
                    android:id="@+id/et_start_salary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_empty_grey_3"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="@dimen/dp_4"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="k"
                    android:textColor="@color/black25"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:text="——" />

                <EditText
                    android:id="@+id/et_end_salary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_empty_grey_3"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="@dimen/dp_4"
                    android:singleLine="true" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="k"
                    android:textColor="@color/black25"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/bt_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@drawable/bt_red_5_press"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:visibility="@{vm.needDelete?View.VISIBLE:View.GONE}" />
    </LinearLayout>
</layout>